--- a/static/enhanced.css
+++ b/static/enhanced.css
@@ -201,6 +201,10 @@ body {
   gap: 8px;
 }
 
+.title:not(:first-child) {
+  margin-top: 8px;
+}
+
 .title i {
   color: var(--primary-color);
   font-size: 1rem;
@@ -214,6 +218,11 @@ input, select {
   color: var(--text-color);
   font-size: 0.9rem;
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.03);
+}
+
+input[type="date"], input[type="time"] {
+  padding: 0.8rem;
+  font-family: 'Roboto', sans-serif;
 }
 
 input:focus, select:focus {
